{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 56,
  "lineage": "a53630d7-d40e-1d14-3d37-acd4094146af",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "mfpiaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/publicIPAddresses/mfpi",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.80.175.216",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mfpi",
            "resource_group_name": "mfrg",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mfnia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/networkInterfaces/mfni",
            "internal_domain_name_suffix": "acslqrca2mpedgf32f1w11xv5b.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/publicIPAddresses/mfpi",
                "subnet_id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/virtualNetworks/mfvn/subnets/mfsn"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-94-97-BE",
            "name": "mfni",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mfrg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Compute/virtualMachines/mflvm"
          },
          "dependencies": [
            "azurerm_public_ip.mfpia",
            "azurerm_resource_group.mfrga",
            "azurerm_subnet.mfsna",
            "azurerm_virtual_network.mfvna"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mfnsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/networkSecurityGroups/mfnsg",
            "location": "westeurope",
            "name": "mfnsg",
            "resource_group_name": "mfrg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mfnsr",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mfrga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mfnsra",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/networkSecurityGroups/mfnsg/securityRules/mfnsr",
            "name": "mfnsr",
            "network_security_group_name": "mfnsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mfrg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mfnsga",
            "azurerm_resource_group.mfrga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mfpia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/publicIPAddresses/mfpi",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.80.175.216",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "mfpi",
            "resource_group_name": "mfrg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mfrga"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mfsna",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/virtualNetworks/mfvn/subnets/mfsn",
            "name": "mfsn",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "mfrg",
            "virtual_network_name": "mfvn"
          },
          "dependencies": [
            "azurerm_resource_group.mfrga",
            "azurerm_virtual_network.mfvna"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mfnsgaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/virtualNetworks/mfvn/subnets/mfsn",
            "network_security_group_id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/networkSecurityGroups/mfnsg",
            "subnet_id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/virtualNetworks/mfvn/subnets/mfsn"
          },
          "dependencies": [
            "azurerm_network_security_group.mfnsga",
            "azurerm_resource_group.mfrga",
            "azurerm_subnet.mfsna",
            "azurerm_virtual_network.mfvna"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mfvna",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "44b8a400-e340-411e-98bd-e1776deef5f9",
            "id": "subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/virtualNetworks/mfvn",
            "location": "westeurope",
            "name": "mfvn",
            "resource_group_name": "mfrg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/virtualNetworks/mfvn/subnets/mfsn",
                "name": "mfsn",
                "security_group": "/subscriptions/04d9f053-d0be-48cf-8d8f-85d19526354a/resourceGroups/mfrg/providers/Microsoft.Network/networkSecurityGroups/mfnsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mfrga"
          ]
        }
      ]
    }
  ]
}